--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portofolio Achmad Rufi</title>
+    <title>Portofolio Achmad Ma'rufi Siddiq</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     
@@ -229,7 +229,7 @@
         <div class="glow-circle glow-2"></div>
 
         <header>
-            <img src="profil.jpg" alt="Achmad Rufi" class="profile-pic">
+            <img src="1.jpg" alt="Achmad Ma'rufi Siddiq" class="profile-pic">
             <h1>Achmad Rufi</h1>
             <div class="subtitle">Future Electrical Engineer</div>
             
@@ -307,3 +307,4 @@
 
 </body>
 </html>
+
