--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
             <div class="hero-image">
                 <div class="img-wrapper">
-                    <img src="images/profile.jpg" alt="Profile Picture">
+                    <img src="images/profile.png" alt="Profile Picture">
                     <div class="circle-spin"></div>
                 </div>
             </div>
@@ -271,3 +271,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
